Version 0.8.1
=============
* A couple of minor GCC 3.4.2. issues have been fixed.
* Add ons are now refered to as contribs all contribs have been added
  to the main source directory under the contrib directory. All
  contribs now also reside in a namespace called contrib.
* ScrollArea::isOpaque and ScrollArea::setOpaque have been added to
  control if a scroll area should draw its background or not.
* DELETE is now undefined in Key.hpp if present. It should hopefully
  take care of some problems with windows.h defining delete which
  sometimes breaks Key.hpp.
* Soname support has been fixed. The correct version number should
  now be used in the produced binaries.
	
Version 0.8.0
=============
* Widget::showPart has been added to be used when a specific
  part of a widget should be visible. An example is when a text
  area wants a specific text part to be visible in a scroll area.
  This function uses BasicContainer::showWidgetPart.
* ListBox::setWrappingKeyboardSelection and
  ListBox::isWrappingKeyboardSelection have been renamed to
  ListBox::setWrappingEnabled and ListBox::isWrappingEnabled.
* Rectangle::intersect has been renamed to Rectangle::isIntersecting.
* Widget::hasModalFocus and Widget::hasModalMouseInputFocus has been
  renamed to Widget::isModalFocused and Widget::isModalMouseInputFocused.
* Widget::generateAction has been renamed to
  Widget::distributeActionEvent.
* All the examples have been improved. Examples have been added for
  HGE, OpenGL with SDL and for OpenGL with Allegro.
* Widget::drawBorder, Widget::getBorderSize and Widget::setBorderSize
  have been renamed to Widget::drawFrame, Widget::getFrameSize and
  Widget::setFrameSize.
* The alignment enum in Graphics, the orientation enum in Slider and
  the scroll policy enum in ScrollArea are no longer anonymous enums.
* RadioButton::setMarked and RadioButton::isMarked have been
  renamed to RadioButton::setSelected and RadioButton::isSelected.